bmt/swire/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swire-ingress
  namespace: bmt
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: swire.berkeley.mt
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: swire-server
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: swire-client
                port:
                  number: 80
  tls:
    - hosts:
        - swire.berkeley.mt
      secretName: swire-ingress-tls
